Add ability for users to customize certain behaviour (#71)
* add customization card with custom winding time and custom pause time

* Compute new cycle duration on customization changes

* update oas

* add clock ui

* save icon in backend

* change worldtime failure to a warning

* send `rtc_selectedHour` and `rtc_selectedMinutes` to BE

* simply clock logic and add ability to manually set it

* consistent casing

* add `customWindDuration` and `customWindPauseDuration` to state and parse it in update endpoint. Also provide values in status call

* refactor timing comparison

* update internal `calculateWindingTime()` prediction

* customizable timing complete through web UI

* add HA cycle customization

* add home assistant fields

* backage new FE build artifacts

* add `customDurationInSecondsToCompleteOneRevolution` customization

* add `customDurationInSecondsToCompleteOneRevolution` to web ui

* attach FE build

* udpate docs

* add clarifying statement for Upload and Upload Filesystem Image steps. #79
