# openapi.yml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
   title: Winderoo API
-  version: 1.0.0
+  version: 2.1.0
 servers:
   - url: http://winderoo.local/api/
     description: local development and deployed devices
@@ -135,6 +135,11 @@ components:
             action: "START"
             rotationDirection: "BOTH"
             screenSleep: false
+            customWindDuration: 180
+            customWindPauseDuration: 15
+            customDurationInSecondsToCompleteOneRevolution: 8
+            rtcSelectedHour: 8
+            rtcSelectedminutes: 30
     PowerBody:
       description: a JSON object containing winderoo power information
       required: true
@@ -216,10 +221,6 @@ components:
           type: string
           examples:
             - 50
-        durationInSecondsToCompleteOneRevolution:
-          type: number
-          examples:
-            - 8
         startTimeEpoch:
           type: number
           examples:
@@ -252,6 +253,18 @@ components:
           type: boolean
           examples:
             - false
+        customWindDuration:
+          type: number
+          examples:
+            - 180
+        customWindPauseDuration:
+          type: number
+          examples:
+            - 15
+        customDurationInSecondsToCompleteOneRevolution:
+          type: number
+          examples:
+            - 8
     Resetting:
       type: object
       properties:
